<resources>
    <string name="app_name">MyWeather</string>
    <!-- MainActivity -->
    <string name="refresh">Atualizar</string>
    <string name="weather">Clima</string>
    <string name="temperature">Temperatura</string>
    <!-- Snackbar -->
    <string name="update">Atualizar</string>
    <string name="snackbar_update_data">Deseja atualizar as informações?</string>
    <!-- Totas Permissões -->
    <string name="please_wait">Aguarde um instante</string>
    <string name="error_permission">Permissão não Concedida!</string>
    <!-- Painel Inferior -->
    <string name="sensation">Sensação</string>
    <string name="humidity">Umidade</string>
    <string name="wind">Vento</string>
    <string name="pressure">Pressão</string>
    <!-- Painel Dados -->
    <string name="temperature_data_celsius">%1$s °</string>
    <string name="temperature_data_fahrenheit">%1$s F</string>
    <string name="humidity_data">%s%%</string>
    <string name="wind_data">%1$d m/s</string>
    <string name="pressure_data">%1$d hPa</string>
    <!-- Settings Activity -->
    <string name="settings">Configurações</string>
    <string name="back">Voltar</string>
    <!-- Dialog Settings -->
    <string name="data_language">Idioma dos Dados</string>
    <string name="temperature_unit">Unidade de Temperatura</string>
    <string name="ready">Pronto</string>
    <!-- Dialogs -->
    <string name="error">Algo deu errado!</string>
    <string name="error_text">Verifique sua conexão com a internet ou tente novamente mais tarde.</string>
</resources>