<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageButton
        android:id="@+id/imageButtonRefresh"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:contentDescription="@string/refresh"
        android:src="@drawable/ic_refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textLocationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageWeatherStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Cedro" />

    <ImageView
        android:id="@+id/imageWeatherStatus"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/weather"
        app:layout_constraintBottom_toTopOf="@id/textTemperatureStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTemperatureStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:textColor="@color/blue"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        tools:text="35.0°" />

    <TextView
        android:id="@+id/textDescriptionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTemperatureStatus"
        tools:text="Ceú Limpo" />

    <TextView
        android:id="@+id/textMainStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDescriptionStatus"
        tools:text="Chuva" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearContainerBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            style="@style/CardViewMain"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageFeelsLikeTemp"
                    style="@style/ImageViewMain"
                    android:contentDescription="@string/sensation"
                    android:src="@drawable/ic_temperature"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textSupportFeelsLikeTemp"
                    style="@style/TextViewSupportMain"
                    android:text="@string/sensation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageFeelsLikeTemp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textFeelsLikeTemp"
                    style="@style/TextViewMain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/textSupportFeelsLikeTemp"
                    app:layout_constraintStart_toStartOf="@id/textSupportFeelsLikeTemp"
                    app:layout_constraintTop_toBottomOf="@id/textSupportFeelsLikeTemp"
                    tools:text="35.2°" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CardViewMain"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageHumidity"
                    style="@style/ImageViewMain"
                    android:contentDescription="@string/humidity"
                    android:src="@drawable/ic_humidity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textSupportHumidity"
                    style="@style/TextViewSupportMain"
                    android:text="@string/humidity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageHumidity"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textHumidity"
                    style="@style/TextViewMain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/textSupportHumidity"
                    app:layout_constraintStart_toStartOf="@id/textSupportHumidity"
                    app:layout_constraintTop_toBottomOf="@id/textSupportHumidity"
                    tools:text="95%" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearContainerBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.card.MaterialCardView
            style="@style/CardViewMain"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageWind"
                    style="@style/ImageViewMain"
                    android:contentDescription="@string/wind"
                    android:src="@drawable/ic_wind"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textSupportWind"
                    style="@style/TextViewSupportMain"
                    android:text="@string/wind"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageWind"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textWind"
                    style="@style/TextViewMain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/textSupportWind"
                    app:layout_constraintStart_toStartOf="@id/textSupportWind"
                    app:layout_constraintTop_toBottomOf="@id/textSupportWind"
                    tools:text="0 m/s" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CardViewMain"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imagePressure"
                    style="@style/ImageViewMain"
                    android:contentDescription="@string/pressure"
                    android:src="@drawable/ic_pressure"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textSupportPressure"
                    style="@style/TextViewSupportMain"
                    android:text="@string/pressure"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imagePressure"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textPressure"
                    style="@style/TextViewMain"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/textSupportPressure"
                    app:layout_constraintStart_toStartOf="@id/textSupportPressure"
                    app:layout_constraintTop_toBottomOf="@id/textSupportPressure"
                    tools:text="1020 hPa" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>